# Chujowe-Perfect-Comms

./: .gitignore  CHANGELOG.md  CrewmateAvatarRenderer.cs  MeetingSpeakingIndicatorPatch.cs  ModdedRoomManager.cs  PerfectComms.csproj  PerfectCommsCreditsColorPatch.cs  PerfectCommsUpdateClient.cs  PerfectCommsUpdateNotifier.cs  PingTrackerPatch.cs  README.md  ReactorHttpMatchmakingBridge.cs  VCManager.cs  VoiceChatHudState.cs  VoiceChatPluginMain.cs  VoiceChatRoomDriver.cs  VoiceLevelVisual.cs  nuget.config
Audio/: AndroidAudioBackend.cs  AudioHelpers.cs  AudioProviders.cs  AudioRouting.cs  CircularFloatBuffer.cs  MicPreprocessor.cs  RnNoiseSuppressor.cs  SmoothedAudioValue.cs  WinMmOutputDevices.cs
Comms/: AndroidMicrophone.cs  AndroidSpeaker.cs  BclVoicePacket.cs  BetterCrewLinkLobbyBrowserClient.cs  BetterCrewLinkLobbyMetadata.cs  BetterCrewLinkLobbyPublisher.cs  BetterCrewLinkPlaybackGraph.cs  BetterCrewLinkSocketOptions.cs  BetterCrewLinkVoiceBackend.cs  IVoiceBackend.cs  InterstellarVoiceBackend.cs  PermissionHelper.cs  TouMceVoiceIntegration.cs  VCPlayer.cs  VanillaLobbyBrowserPatches.cs  VanillaLobbyDiagnostics.cs  VanillaLobbyPublicApiClient.cs  VoiceActivityTracker.cs  VoiceAudioOcclusion.cs  VoiceAudioRoute.cs  VoiceCameraState.cs  VoiceCameraStatePatches.cs  VoiceChatGameOptions.cs  VoiceChatKeybinds.cs  VoiceChatLocalSettings.cs  VoiceChatPatches.cs  VoiceChatRoom.cs  VoiceClientRegistry.cs  VoiceComponent.cs  VoiceGamePhase.cs  (+36 more)
NativeAudioMacOS/: CMakeLists.txt
NativeAudioMacOS/include/: perfectcomms_audio.h
NativeAudioMacOS/src/: perfectcomms_audio.c
(+36 files in other folders)
